include/unicorn/unicorn.h

typedef struct uc_struct uc_engine;
typedef size_t uc_hook;
typedef enum uc_arch {
    UC_ARCH_ARM = 1,    
    UC_ARCH_ARM64,      
    UC_ARCH_MIPS,       
    UC_ARCH_X86,        
    UC_ARCH_PPC,        
    UC_ARCH_SPARC,      
    UC_ARCH_M68K,       
    UC_ARCH_MAX,
} uc_arch;
typedef enum uc_mode {
    UC_MODE_LITTLE_ENDIAN = 0,    
    UC_MODE_BIG_ENDIAN = 1 << 30, 
    UC_MODE_ARM = 0,              
    UC_MODE_THUMB = 1 << 4,       
    UC_MODE_MCLASS = 1 << 5,      
    UC_MODE_V8 = 1 << 6,          
    UC_MODE_ARM926 = 1 << 7,	  
    UC_MODE_ARM946 = 1 << 8,	  
    UC_MODE_ARM1176 = 1 << 9,	  
    UC_MODE_MICRO = 1 << 4,       
    UC_MODE_MIPS3 = 1 << 5,       
    UC_MODE_MIPS32R6 = 1 << 6,    
    UC_MODE_MIPS32 = 1 << 2,      
    UC_MODE_MIPS64 = 1 << 3,      
    UC_MODE_16 = 1 << 1,          
    UC_MODE_32 = 1 << 2,          
    UC_MODE_64 = 1 << 3,          
    UC_MODE_PPC32 = 1 << 2,       
    UC_MODE_PPC64 = 1 << 3,       
    UC_MODE_QPX = 1 << 4,         
    UC_MODE_SPARC32 = 1 << 2,     
    UC_MODE_SPARC64 = 1 << 3,     
    UC_MODE_V9 = 1 << 4,          
} uc_mode;
typedef enum uc_err {
    UC_ERR_OK = 0,   
    UC_ERR_NOMEM,      
    UC_ERR_ARCH,     
    UC_ERR_HANDLE,   
    UC_ERR_MODE,     
    UC_ERR_VERSION,  
    UC_ERR_READ_UNMAPPED, 
    UC_ERR_WRITE_UNMAPPED, 
    UC_ERR_FETCH_UNMAPPED, 
    UC_ERR_HOOK,    
    UC_ERR_INSN_INVALID, 
    UC_ERR_MAP, 
    UC_ERR_WRITE_PROT, 
    UC_ERR_READ_PROT, 
    UC_ERR_FETCH_PROT, 
    UC_ERR_ARG,     
    UC_ERR_READ_UNALIGNED,  
    UC_ERR_WRITE_UNALIGNED,  
    UC_ERR_FETCH_UNALIGNED,  
    UC_ERR_HOOK_EXIST,  
    UC_ERR_RESOURCE,    
    UC_ERR_EXCEPTION, 
    UC_ERR_TIMEOUT 
} uc_err;
typedef enum uc_afl_ret {
  UC_AFL_RET_ERROR = 0, 
  UC_AFL_RET_CHILD, 
  UC_AFL_RET_NO_AFL, 
  UC_AFL_RET_FINISHED, 
} uc_afl_ret;
typedef struct uc_mem_region {
    uint64_t begin; 
    uint64_t end;   
    uint32_t perms; 
} uc_mem_region;
typedef enum uc_query_type {
    UC_QUERY_MODE = 1,
    UC_QUERY_PAGE_SIZE,
    UC_QUERY_ARCH,
} uc_query_type;
struct uc_context;
typedef struct uc_context uc_context;
UNICORN_EXPORT
unsigned int uc_version(unsigned int *major, unsigned int *minor);
UNICORN_EXPORT
bool uc_arch_supported(uc_arch arch);
UNICORN_EXPORT
uc_err uc_open(uc_arch arch, uc_mode mode, uc_engine **uc);
UNICORN_EXPORT
uc_err uc_close(uc_engine *uc);
UNICORN_EXPORT
uc_err uc_query(uc_engine *uc, uc_query_type type, size_t *result);
UNICORN_EXPORT
uc_err uc_errno(uc_engine *uc);
UNICORN_EXPORT
const char *uc_strerror(uc_err code);
UNICORN_EXPORT
uc_err uc_reg_write(uc_engine *uc, int regid, const void *value);
UNICORN_EXPORT
uc_err uc_reg_read(uc_engine *uc, int regid, void *value);
UNICORN_EXPORT
uc_err uc_mem_write(uc_engine *uc, uint64_t address, const void *bytes, size_t size);
UNICORN_EXPORT
uc_err uc_mem_read(uc_engine *uc, uint64_t address, void *bytes, size_t size);
UNICORN_EXPORT
uc_err uc_emu_start(uc_engine *uc, uint64_t begin, uint64_t until, uint64_t timeout, size_t count);
typedef bool (*uc_afl_cb_place_input_t)(uc_engine *uc, char *input, size_t input_len, uint32_t persistent_round, void *data);
typedef bool (*uc_afl_cb_validate_crash_t)(uc_engine *uc, uc_err unicorn_result, char *input, int input_len, int persistent_round, void *data);
UNICORN_EXPORT
uc_afl_ret uc_afl_fuzz(
    uc_engine *uc, 
    char* input_file, 
    uc_afl_cb_place_input_t place_input_callback, 
    uint64_t *exits, 
    size_t exit_count, 
    uc_afl_cb_validate_crash_t validate_crash_callback, 
    bool always_validate,
    uint32_t persistent_iters,
    void *data
);
UNICORN_EXPORT
uc_afl_ret uc_afl_forkserver_start(uc_engine *uc, uint64_t *exits, size_t exit_count);
UNICORN_EXPORT
uc_err uc_emu_stop(uc_engine *uc);
UNICORN_EXPORT
uc_err uc_hook_add(uc_engine *uc, uc_hook *hh, int type, void *callback,
        void *user_data, uint64_t begin, uint64_t end, ...);
UNICORN_EXPORT
uc_err uc_hook_del(uc_engine *uc, uc_hook hh);
UNICORN_EXPORT
uc_err uc_mem_map(uc_engine *uc, uint64_t address, size_t size, uint32_t perms);
UNICORN_EXPORT
uc_err uc_mem_map_ptr(uc_engine *uc, uint64_t address, size_t size, uint32_t perms, void *ptr);
UNICORN_EXPORT
uc_err uc_mem_unmap(uc_engine *uc, uint64_t address, size_t size);
UNICORN_EXPORT
uc_err uc_mem_protect(uc_engine *uc, uint64_t address, size_t size, uint32_t perms);
UNICORN_EXPORT
uc_err uc_mem_regions(uc_engine *uc, uc_mem_region **regions, uint32_t *count);
UNICORN_EXPORT
uc_err uc_context_alloc(uc_engine *uc, uc_context **context);
UNICORN_EXPORT
uc_err uc_free(void *mem);
UNICORN_EXPORT
uc_err uc_context_save(uc_engine *uc, uc_context *context);
UNICORN_EXPORT
uc_err uc_context_restore(uc_engine *uc, uc_context *context);